--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ website:
   navbar:
     right:
       - about.qmd
+      - 404.qmd
       - icon: github
         href: https://github.com/jiehua1995
       - icon: rss
